# ccproxy-api

./: .ccproxy.codex.msaf.toml.example  .ccproxy.toml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLEANUP_PLAN.md  CONTRIBUTING.md  CONVENTIONS.md  DEPENDENCY_INJECTION_PLAN.md  Dockerfile  Dockerfile.2  HOOKS_INTEGRATION_PLAN.md  HOOK_ORDERING_IMPLEMENTATION_PLAN.md  Makefile  README.md  REFACTORING_PLAN.md  REFACTORING_SUMMARY.md  TESTING.md  Taskfile  config.example.toml  conftest.py  debug_streaming.sh  debug_streaming_.sh  devenv.nix  docker-compose.monitoring.yml  flake.nix  mkdocs.yml  notify.sh  pyproject.toml  response_models_function_calling_sonnet.py  test_compression_disabled.py  test_function_calling_sonnet.py  test_hooks_integration.py  test_http_hooks.py  test_http_hooks_post.py  test_raw_http_capture.py
.github/workflows/: ci.yml  packages.yml  python-ci.yml  release.yml
ccproxy/adapters/: __init__.py
ccproxy/api/: app.py  decorators.py  dependencies.py  responses.py
ccproxy/auth/: bearer.py  conditional.py  dependencies.py  manager.py
ccproxy/claude_sdk/: __init__.py  client.py  converter.py  manager.py  message_queue.py  models.py  options.py  parser.py  pool.py  session_client.py  session_context.py  session_pool.py  stream_handle.py  stream_worker.py  streaming.py  streaming_wrapper.py
ccproxy/cli/: _settings_help.py  decorators.py  docker_helpers.py  main.py  oauth_integration.py
ccproxy/config/: __init__.py  auth.py  claude.py  constants.py  core.py  docker_settings.py  features.py  logging.py  observability.py  runtime.py  scheduler.py  security.py  server.py  settings.py  utils.py
ccproxy/core/: __init__.py  async_runtime.py  async_task_manager.py  async_utils.py  constants.py  errors.py  http.py  http_client.py  http_client_hooks.py  http_transformers.py  interfaces.py  logging.py  request_context.py  services.py  transformers.py
ccproxy/data/: claude_headers_fallback.json  codex_headers_fallback.json
ccproxy/docker/: adapter.py  docker_path.py  middleware.py  protocol.py
ccproxy/hooks/: __init__.py  events.py  layers.py  manager.py  registry.py  thread_manager.py
ccproxy/http/: __init__.py  base.py  client.py  connection_pool.py  hooks.py  plugin_handler.py  pool.py  processor.py
ccproxy/models/: __init__.py  claude_sdk.py  confirmations.py  detection.py  messages.py  permissions.py  responses.py  types.py
ccproxy/observability/: __init__.py  access_logger.py  context.py  pushgateway.py  streaming_pool_response.py  streaming_response.py  streaming_session_response.py
ccproxy/plugins/: __init__.py  base_factory.py  declaration.py  discovery.py  factory.py  loader.py  middleware.py  runtime.py
ccproxy/plugins/copilot/: adapter.py  config.py  detection_service.py  format_adapter.py  manager.py  models.py  plugin.py  pyproject.toml  routes.py
ccproxy/plugins/copilot/oauth/: client.py  models.py  provider.py  storage.py
ccproxy/plugins/copilot/transformers/: __init__.py  request.py  response.py
ccproxy/pricing/: updater.py
docs/: IMPROVEMENT_PLAN.md  OAUTH_PLUGIN_ARCHITECTURE.md  PLUGIN_AUTHORING.md  PLUGIN_SYSTEM_DOCUMENTATION.md  README.md  anyio.txt  examples.md  index.md  metrics-api.md  observability.md  plugin-dependency-system.md  release-v0.2-status.md  systemd-setup.md  v0.2-release-open-items.md
examples/: common_utils.py  console_utils.py  debug_anthropic_streaming.py  openai_streaming_demo.py  openai_thinking_demo.py  textual_chat_agent.py
nix/: flake.nix
plugins/: __init__.py
plugins/analytics/: __init__.py  config.py  ingest.py  models.py  plugin.py  pyproject.toml  routes.py  service.py
plugins/analytics/ccproxy/plugins/analytics/: models.py  routes.py
plugins/analytics/tests/unit/: test_analytics_pagination_service.py  test_reset_endpoint.py
plugins/dashboard/: __init__.py  config.py  plugin.py  pyproject.toml  routes.py
plugins/duckdb_storage/: __init__.py  config.py  plugin.py  pyproject.toml  routes.py  storage.py
plugins/duckdb_storage/ccproxy/plugins/duckdb_storage/: plugin.py  storage.py
plugins/metrics/: README.md  __init__.py  collector.py  config.py  hook.py  plugin.py  pushgateway.py  pyproject.toml  routes.py
plugins/metrics/ccproxy/plugins/metrics/: collector.py  hook.py  plugin.py  pushgateway.py  routes.py  tasks.py
plugins/metrics/ccproxy/plugins/metrics/tests/integration/: test_metrics_basic.py
plugins/metrics/tests/: conftest.py
plugins/metrics/tests/integration/: test_metrics_basic.py
plugins/metrics/tests/unit/: test_manifest.py
plugins/oauth_claude/: client.py  config.py  manager.py  models.py  plugin.py  provider.py  pyproject.toml  storage.py
plugins/oauth_claude/ccproxy/plugins/oauth_claude/: client.py  manager.py  models.py  plugin.py  provider.py
plugins/oauth_claude/tests/unit/: test_models_and_manager.py
plugins/oauth_codex/: __init__.py  client.py  config.py  manager.py  models.py  plugin.py  provider.py  pyproject.toml  storage.py
plugins/oauth_codex/ccproxy/plugins/oauth_codex/: client.py  config.py  plugin.py  provider.py
plugins/pricing/: pyproject.toml  updater.py  utils.py
plugins/pricing/ccproxy/plugins/pricing/: plugin.py  service.py
scripts/: build-docs.sh  check_import_boundaries.py  docker_runner.py  entrypoint.sh  last_request.sh  run_integration_tests.py  test_endpoint.py
tests/: conftest.py  smoketest.py  test_access_logger_integration.py  test_adapter_dispatch.py  test_api.py  test_claude_sdk_options.py  test_cli_auth_commands.py  test_cli_config.py  test_cli_confirmation_handler.py  test_cli_serve.py  test_confirmation_integration.py  test_confirmation_routes.py  test_confirmation_service.py  test_handler_config.py  test_http_transformers.py  test_mcp_route.py  test_metrics_api.py  test_observability.py  test_pricing.py  test_pushgateway_error_handling.py  test_reset_endpoint.py  test_scheduler.py  test_sse_stream_filtering.py  test_streaming.py  test_terminal_handler.py  test_tool_call_streaming.py  test_tool_call_streaming_fix.py  test_tool_result_sanitization.py  test_unified_scheduler.py
(+651 files in other folders)
