[project]
name = "ccproxy-api"
# version = "0.1.0"
dynamic = ["version"]
description = "API server that provides an Anthropic and OpenAI compatible interface over Claude Code, allowing to use your Claude OAuth account or over the API."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "aiofiles>=24.1.0",
  "jsonschema>=4.23.0",
  "fastapi[standard]>=0.115.14",
  "httpx[http2]>=0.28.1",
  "prometheus-client>=0.22.1",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.4.0",
  "rich>=13.0.0",
  "rich-toolkit>=0.14.8",
  "structlog>=25.4.0",
  "typer>=0.16.0",
  "duckdb>=1.1.0",
  "typing-extensions>=4.0.0",
  "uvicorn>=0.34.0",
  "sqlmodel>=0.0.24",
  "duckdb-engine>=0.17.0",
  "textual>=3.7.1",
  "packaging>=25.0",
  "aiohttp>=3.12.15",
  "sortedcontainers>=2.4.0",
  "aioconsole>=0.8.1",
]

[build-system]
# Using hatchling to used git tag for version
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"
# requires = ["uv"]
# build-backend = "uv.build"

[tool.hatch.version]
source = "vcs"


[tool.hatch.build.hooks.vcs]
version-file = "ccproxy/core/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["ccproxy", "plugins"]
include = [
  "ccproxy/data/*.json",
  "plugins/**/*.py",
  "plugins/**/*.json",
  "plugins/**/*.toml",
]

[tool.hatch.build.targets.sdist]
include = [
  "ccproxy/**/*.py",
  "ccproxy/**/*.json",
  "ccproxy/static/dashboard/**",
  "plugins/**/*.py",
  "plugins/**/*.json",
  "plugins/**/*.toml",
  "README.md",
  "LICENSE",
  "pyproject.toml",
]

[project.scripts]
# ccproxy = "ccproxy.cli:app"
ccproxy = "ccproxy.cli:main"
ccproxy-api = "ccproxy.cli:main"
ccproxy-perm = "ccproxy.cli.commands.permission:main"

[project.optional-dependencies]
# Plugin-focused extras to enable splitting plugin deps from core at install time.
# Kept in root dependencies for now because plugins are bundled with the wheel.
# These extras provide an escape hatch for future distribution changes.
plugins-storage = ["duckdb>=1.1.0", "duckdb-engine>=0.17.0", "sqlmodel>=0.0.24"]
plugins-metrics = ["prometheus-client>=0.22.1"]
plugins-ui = ["textual>=3.7.1"]

[tool.coverage.run]
source = ["ccproxy", "tests"]
include = ["ccproxy/*", "tests/*"]
omit = [
  "ccproxy/core/_version.py",
  "ccproxy/__main__.py",
  "tests/conftest.py",
  "*/migrations/*",
  "*/__pycache__/*",
  "*/.*",
]
branch = true
parallel = true
concurrency = ["thread", "multiprocessing"]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
skip_empty = true
sort = "Cover"
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if self.debug:",
  "if settings.DEBUG",
  "raise AssertionError",
  "raise NotImplementedError",
  "if 0:",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
  "from typing import",
  "VERSION_TUPLE = Tuple",
  "class .*Protocol.*:",
  "@(abc\\.)?abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
title = "CCProxy Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py311"
line-length = 88

# Add source paths for better import resolution
src = ["ccproxy", "plugins", "tests"]

# Extend include patterns for your monorepo
extend-include = ["plugins/**/*.py"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # Pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "PTH", # flake8-use-pathlib
]

ignore = [
  "E501",   # Line too long (handled by formatter)
  "B008",   # Do not perform function calls in argument defaults
  "N806",   # Variable in function should be lowercase (for pandas df, etc)
  "SIM108", # Use ternary operator (sometimes less readable)
  "F401",   # Imported but unused
  "F841",   # Local variable assigned but never used
  "B904",   # "Use 'except*' to catch multiple exceptions"
  "SIM102", # "Use 'set' operations to compute set intersections"
]

[tool.ruff.lint.flake8-tidy-imports]

[tool.ruff.lint.per-file-ignores]
"plugins/**" = ["TID251"]
"tests/**" = ["TID251"]
"scripts/**" = ["TID251"]

# relax on scripts and tests
"scripts/*" = ["T201"] # check for print statements
"tests/*" = [
  "N802",
  "N803",
  "B023",
] # arg/function name should be lowercase, allow assert, does not bind loop variable
"plugins/*/tests/*" = ["N802", "N803", "S101"] # Allow assert in plugin tests


[tool.ruff.format]
quote-style = "double"
indent-style = "space"


[tool.ruff.lint.isort]
known-first-party = ["ccproxy"]
force-single-line = false
lines-after-imports = 2


[tool.mypy]
python_version = "3.11"
show_column_numbers = true
follow_imports = "normal"
exclude = [
  "^[^/]+\\.py$",
  "docs/",
  "site/",
  "tests/",
  "examples/",
  "plugins/.*/tests/",
  # "plugins/.*/ccproxy/.*",
]
namespace_packages = true
explicit_package_bases = true

# Enable all strict mode flags
strict = true
# The following settings are enabled by --strict:
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_return_any = true
disallow_any_generics = true
disallow_subclassing_any = true
disallow_any_unimported = true
warn_unreachable = false

# if we need to disable certain strict checks
# disallow_incomplete_defs = false
# disallow_untyped_decorators = false


[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["tomli", "sse_starlette.sse", "fastapi_mcp"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "plugins.permissions.mcp"
disable_error_code = ["unused-ignore"]

[[tool.mypy.overrides]]
module = [
  "tests.integration.test_metrics_plugin",
  "tests.unit.api.test_metrics_api",
  "tests.unit.test_hook_ordering",
  "tests.unit.api.test_plugins_status",
  "tests.unit.api.test_reset_endpoint",
  "tests.unit.plugins.test_codex_transformers",
  "tests.unit.api.test_api",
  "tests.unit.services.test_queue_duckdb_storage",
  "tests.unit.services.test_scheduler",
  "tests.unit.services.test_pricing",
  "tests.unit.plugins.test_claude_api_pricing",
  "tests.unit.services.test_fastapi_factory",
  "tests.unit.services.test_streaming",
  # "tests.unit.utils.test_binary_resolver",  # many untyped helpers; keep ignored for now
  "tests.unit.streaming.test_deferred_response",
  "tests.unit.services.test_adapters",
  "tests.unit.services.test_docker",
  "tests.unit.services.test_confirmation_service",
  "tests.unit.services.test_session_pool_race_condition",
  "tests.unit.utils.test_startup_helpers",
  "tests.unit.test_hooks",
  "tests.unit.test_caching",
  "tests.unit.test_plugin_system",
  "tests.unit.api.test_confirmation_routes",
  "tests.unit.api.test_mcp_route",
  "tests.unit.utils.test_version_checker",
  "tests.unit.services.test_sse_events",
  "tests.unit.services.test_sse_stream_filtering",
  "tests.unit.services.test_stats_printer",
  "tests.unit.utils.test_binary_resolver",
]
ignore_errors = false

[[tool.mypy.overrides]]
module = [
  "tests.unit.test_hooks",
  "tests.unit.utils.test_binary_resolver",
  "tests.unit.test_caching",
  "tests.unit.test_plugin_system",
  "tests.unit.api.test_confirmation_routes",
  "tests.unit.api.test_mcp_route",
]
disallow_untyped_defs = false
disallow_untyped_calls = false
warn_unused_ignores = false

[[tool.mypy.overrides]]
# Final override to relax type checking for tests during migration
module = "tests.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = ["ccproxy.plugins.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["plugins.*"]
ignore_missing_imports = true


[tool.pytest.ini_options]
minversion = "6.0"
timeout = 30
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--disable-warnings",
  "--tb=short",
  "-v",
  "--cov=ccproxy",
  "--cov=tests",
  "--cov-report=term-missing",
  "--cov-report=html:htmlcov",
  "--cov-report=xml",
  "--cov-branch",
  # "--cov-fail-under=80",
]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
norecursedirs = [
  ".git",
  ".tox",
  "dist",
  "build",
  "*.egg",
  "venv",
  ".venv",
  ".devenv",
  "node_modules",
  "__pycache__",
  ".devenv",
  "tests_new",
]
filterwarnings = [
  "ignore::UserWarning",
  "ignore::DeprecationWarning",
  "ignore::PendingDeprecationWarning",
]

# Set test mode to prevent pollution of real credential files
env = [
  "CCPROXY_TEST_MODE=true",
  "PYTEST_CURRENT_TEST=true",
  "LOG_LEVEL=WARNING",
]

# Test markers for different test categories and tiers
markers = [
  # Primary test categories
  "unit: Fast unit tests (< 1s each) that don't require external dependencies",
  "integration: Integration tests (< 30s each) that test component interactions",
  "slow: Slow tests (> 30s each) - use sparingly",

  # External dependency markers
  "real_api: Tests that make real API calls to external services (requires API keys)",
  "docker: Tests that require Docker to be running",
  "network: Tests that require network access but don't make real API calls",

  # Feature-specific markers
  "auth: Authentication and authorization tests",
  "streaming: SSE/streaming response tests",
  "api: API endpoint tests",
  "config: Configuration and settings tests",
  "cli: Command-line interface tests",
  "metrics: Metrics and monitoring tests",
  "sdk: SDK endpoint tests using Anthropic SDK client (requires running server)",

  # Test quality markers
  "flaky: Tests that may be unreliable and need investigation",
  "skip_ci: Tests to skip in CI environment",
  "performance: Performance and micro-benchmark oriented tests",
]

[tool.pytest_timeout]
timeout = 300
timeout_method = "thread"

[tool.bandit]
exclude_dirs = ["tests", "docs", "scripts", "examples"]
skips = [
  "B101",
  "B601",
  "B110",
  "B113",
] # Skip assert_used, shell_injection_possible, try_except_pass, request_without_timeout

[tool.tox]
legacy_tox_ini = """
  [tox]
  envlist = py311,py312,py313

  [testenv]
  deps =
      pytest
      pytest-asyncio
      pytest-cov
      pytest-timeout
      pytest-env
      pytest-httpx

  commands = pytest {posargs}
  """

[tool.setuptools.packages.find]
include = ["ccproxy*"]

[tool.uv]
package = true

# Workspace configuration for plugins
[tool.uv.workspace]
members = [
  "plugins/claude_sdk",
  "plugins/claude_api",
  "plugins/codex",
  "plugins/permissions",
  "plugins/metrics",
  "plugins/request_tracer",
  "plugins/access_log",
  "plugins/pricing",
  "plugins/duckdb_storage",
  "plugins/analytics",
  "plugins/dashboard",
  "plugins/oauth_claude",
  "plugins/oauth_codex",
]

[tool.uv.sources]
ccproxy-plugin-claude-sdk = { workspace = true }


[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "standard" # or "strict"

include = ["ccproxy", "plugins", "tests"] # Include all your workspace members

# Exclude unnecessary directories
exclude = [
  "**/__pycache__",
  ".venv",
  "venv",
  "build",
  "dist",
  "*.egg-info",
  ".git",
  ".tox",
  "htmlcov",
  ".pytest_cache",
  ".mypy_cache",
  ".ruff_cache",
  ".devenv",
]

# Virtual environment configuration
# venvPath = "."
# venv = ".venv" # Adjust if using different name

# Extra paths for import resolution
extraPaths = [
  ".",
  "plugins/claude_api",
  "plugins/claude_sdk",
  "plugins/codex",
  "plugins/permissions",
  "plugins/request_tracer",
  "plugins/duckdb_storage",
  "plugins/analytics",
  "plugins/dashboard",
]

# Type checking settings
reportMissingImports = "warning"
reportMissingTypeStubs = false
reportPrivateImportUsage = false
reportUnusedImport = true
reportUnusedClass = true
reportUnusedFunction = true
reportUnusedVariable = true
reportDuplicateImport = true
reportOptionalMemberAccess = true
reportOptionalCall = true
reportOptionalIterable = true
reportOptionalContextManager = true
reportOptionalOperand = true
reportTypedDictNotRequiredAccess = true
reportPrivateUsage = "warning"
reportUnboundVariable = true
reportUnusedCoroutine = true
reportGeneralTypeIssues = true
reportUnnecessaryTypeIgnoreComment = true

# Stub settings
stubPath = "typings"
useLibraryCodeForTypes = true

[dependency-groups]
plugins = ["ccproxy-plugin-claude-sdk"]
