[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-plugin-dashboard"
version = "1.0.0"
description = "Dashboard plugin for CCProxy (serves SPA and mounts assets)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.entry-points."ccproxy.plugins"]
dashboard = "ccproxy.plugins.dashboard.plugin:factory"

[tool.hatch.build.targets.wheel]
packages = ['ccproxy']
