[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-duckdb-storage"
version = "1.0.0"
description = "DuckDB-backed log storage plugin for CCProxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "sqlmodel>=0.0.14",
  "SQLAlchemy>=2.0.0",
  "structlog>=24.1.0",
]

[project.entry-points."ccproxy.plugins"]
duckdb_storage = "ccproxy.plugins.duckdb_storage.plugin:factory"

[tool.hatch.build.targets.wheel]
packages = ["."]

