[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-metrics"
version = "1.0.0"
description = "Prometheus metrics collection plugin for CCProxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "prometheus-client>=0.19.0",
  "httpx>=0.25.0",
  "structlog>=24.1.0",
  "pydantic>=2.5.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.21.0", "pytest-cov>=4.1.0"]

[tool.hatch.build.targets.wheel]
packages = ["."]



[project.entry-points."ccproxy.plugins"]
metrics = "ccproxy.plugins.metrics.plugin:factory"
