[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-oauth-claude"
version = "1.0.0"
description = "OAuth provider plugin for Claude authentication in CCProxy"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[tool.hatch.build.targets.wheel]
packages = ['ccproxy']


[project.entry-points."ccproxy.plugins"]
oauth_claude = "ccproxy.plugins.oauth_claude.plugin:factory"
