[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-pricing-plugin"
version = "1.0.0"
description = "Dynamic pricing plugin for CCProxy"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=23.0",
  "httpx>=0.25.0",
]

[project.entry-points."ccproxy.plugins"]
pricing = "plugin:factory"

[tool.hatch.build.wheel]
sources = "plugins/pricing"
only-include = ["*.py", "py.typed"]

[tool.hatch.build.targets.wheel.sources]
"." = "ccproxy/plugins/pricing"
# [tool.hatch.build.targets.wheel]
# only-include = ["*.py", "py.typed"]
# sources = { "." = "ccproxy/plugins/pricing" }
