[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccproxy-pricing-plugin"
version = "1.0.0"
description = "Dynamic pricing plugin for CCProxy"
dependencies = [
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=23.0",
  "httpx>=0.25.0",
]

[project.entry-points."ccproxy.plugins"]
pricing = "ccproxy.plugins.pricing.plugin:factory"

[tool.hatch.build.targets.wheel]
packages = ["ccproxy"]
