[project]
name = "ccproxy-copilot"
version = "0.1.0"
description = "GitHub Copilot provider plugin for CCProxy"
authors = [
    {name = "CCProxy Team"}
]
dependencies = [
    "httpx",
    "pydantic",
    "fastapi",
    "structlog",
    "uuid"
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ccproxy_copilot"]
